# humanize-text-rust

./: .gitignore  Cargo.toml  README.md  skill.md
.devcontainer/: devcontainer.json
examples/: loop_engineering.txt
rust_examples/: load_skill.rs
skills/loop_engineering_reference_article/: skills.json
src/: main.rs
