[package]
name = "humanize_text_openrouter"
version = "0.4.0"
edition = "2021"
description = "A Rust CLI that rewrites AI-generated text into natural professional writing using OpenRouter."
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
regex = "1"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

