
[package]
name = "humanize_text"
version = "0.5.0"
edition = "2021"
description = "A Rust CLI to rewrite AI-generated text into clearer, natural professional writing using local rules or OpenRouter."

[dependencies]
clap = { version = "4.5", features = ["derive"] }
dotenvy = "0.15"
regex = "1.10"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
