[package]
name = "humanize_text_openrouter"
version = "0.13.0"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
regex = "1"
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
